--- a/style.css
+++ b/style.css
@@ -49,11 +49,33 @@ td, th {
   font-weight: 100;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* +++       Version Mobile          +++*/
 @media (max-width: 721px) {
   .function .function__list, section .exploration, header .location, header, nav {
     display: flex;
     justify-content: center;
+  }
+
+  main .card__resto .resto__section__info, .function .function__list .function__step {
+    box-shadow: 0px 2px 9px 1px #d4d4d4;
+  }
+
+  main .card__resto {
+    border-radius: 15px;
+  }
+
+  main .card__resto .resto__section__img .img__resto__pic {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+
+  main .card__resto .resto__section__info {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
   }
 
   .btn {
@@ -127,7 +149,6 @@ td, th {
     padding: 20px 0;
     margin: 10px 0;
     border-radius: 20px;
-    box-shadow: 0px 2px 9px 1px #d4d4d4;
   }
   .function .function__list .function__step .function__number {
     width: 25px;
@@ -151,6 +172,57 @@ td, th {
   }
   .function .function__list .function__select .function__logo__select {
     color: #9356DC;
+  }
+
+  main {
+    padding: 15px;
+    background-color: #f6f6f6;
+  }
+  main .resto__list {
+    padding: 15px;
+  }
+  main .card__resto {
+    padding-bottom: 20px;
+    position: relative;
+  }
+  main .card__resto .resto__new {
+    background-color: #99E2D0;
+    padding: 5px;
+    color: #278870;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+  }
+  main .card__resto .resto__section__info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: white;
+    align-items: center;
+    padding: 10px;
+  }
+
+  footer {
+    background-color: #353535;
+    padding: 20px;
+  }
+  footer .footer__logo {
+    color: white;
+    margin-bottom: 20px;
+    font-family: "Shrikhand", cursive;
+  }
+  footer .footer__element {
+    display: flex;
+    flex-direction: row;
+    padding: 5px 0;
+  }
+  footer .footer__element__logo {
+    color: white;
+    width: 5%;
+    margin-right: 6px;
+  }
+  footer .footer__element__name {
+    color: white;
   }
 }
 
