--- a/sass/libs/properties.scss
+++ b/sass/libs/properties.scss
@@ -25,3 +25,30 @@ $radius : 15px ;
     border-bottom-left-radius: $radius;
     border-bottom-right-radius: $radius;
 }
+
+%borderRightRadius {
+    border-top-right-radius: $radius;
+    border-bottom-right-radius: $radius;
+}
+
+// colors
+
+$pink : #FF79DA;
+$pinkHover : lighten($color: $pink, $amount: 5);
+
+$purple : #9356DC;
+$purpleLight : rgb(245, 237, 255);
+$purpleHover : lighten($color: $purple, $amount: 5);
+
+
+$pinkPurple : linear-gradient($pink, $purple);
+$pinkPurpleHover : linear-gradient($pinkHover ,$purpleHover);
+
+$white : #ffffff;
+
+$grey : rgb(234, 234, 234);
+$greyLight : rgb(246, 246, 246);
+$greyDark : rgb(53, 53, 53);
+
+$green : #99E2D0 ;
+
