--- a/style.css
+++ b/style.css
@@ -42,6 +42,43 @@ td, th {
   padding: 0;
 }
 
+.function .function__list, section .exploration, header .location, header, nav, .loading .loading__case, .loading {
+  display: flex;
+  justify-content: center;
+}
+
+main .card__resto .resto__section__info, .function .function__list .function__step {
+  box-shadow: 0px 2px 9px 1px #d4d4d4;
+}
+
+main .card__resto, .loading .loading__case .loading__bar .loading__progress, .loading .loading__case .loading__bar {
+  border-radius: 15px;
+}
+
+main .card__resto .img__resto__pic {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+main .card__resto .resto__section__info {
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.btn {
+  width: 45%;
+  background: linear-gradient(#FF79DA, #9356DC);
+  color: #ffffff;
+  padding: 15px;
+  border-radius: 25px;
+  border: none;
+  max-width: 350px;
+}
+
+.btn:hover {
+  background: linear-gradient(#ff93e1, #a16be0);
+}
+
 * {
   font-family: "Roboto", sans-serif;
 }
@@ -54,175 +91,272 @@ a {
 }
 
 /* +++       Version Mobile          +++*/
-@media (max-width: 721px) {
-  .function .function__list, section .exploration, header .location, header, nav {
-    display: flex;
-    justify-content: center;
-  }
+.loading {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(#FF79DA, #9356DC);
+}
+.loading .loading__case {
+  width: 80%;
+  align-items: center;
+  flex-direction: column;
+}
+.loading .loading__case .loading__title {
+  width: 50%;
+  text-align: center;
+  font-family: "Shrikhand", cursive;
+  font-size: 30px;
+  color: #f7f0f0;
+  padding-bottom: 20px;
+}
+.loading .loading__case .loading__bar {
+  border: white solid 3px;
+  width: 50%;
+  height: 50px;
+  background-color: #9356DC;
+}
+.loading .loading__case .loading__bar .loading__progress {
+  background-color: #FF79DA;
+  height: 100%;
+  animation: loadingAvancement 2s;
+}
 
-  main .card__resto .resto__section__info, .function .function__list .function__step {
-    box-shadow: 0px 2px 9px 1px #d4d4d4;
+@keyframes loadingAvancement {
+  from {
+    width: 0%;
   }
-
-  main .card__resto {
-    border-radius: 15px;
-  }
-
-  main .card__resto .resto__section__img .img__resto__pic {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-  }
-
-  main .card__resto .resto__section__info {
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-  }
-
-  .btn {
-    width: 45%;
-    background: linear-gradient(#FF79DA, #9356DC);
-    color: white;
-    padding: 15px;
-    border-radius: 25px;
-    border: none;
-  }
-
-  nav {
+  to {
     width: 100%;
-    padding: 15px;
+  }
+}
+.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  animation: loadPage 3s;
+}
+
+@keyframes loadPage {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+  99% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+nav {
+  width: 100%;
+  padding: 15px;
+}
+nav .nav__img {
+  width: 40%;
+}
+
+header {
+  flex-direction: column;
+  background-color: #eaeaea;
+  width: 100%;
+  padding: 15px;
+  border-top: solid 3px #d4d4d4;
+}
+header .location .location__logo {
+  margin-right: 15px;
+}
+
+section .exploration {
+  background-color: #f6f6f6;
+  flex-direction: column;
+  padding: 15px;
+  align-items: center;
+}
+section .exploration .exploration__title {
+  width: 50%;
+  text-align: center;
+  margin: 10px 0;
+}
+section .exploration .exploration__description {
+  width: 60%;
+  text-align: center;
+  margin: 10px 0;
+}
+section .exploration .exploration__btn {
+  margin: 10px 0 20px;
+}
+
+.function {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  align-items: center;
+}
+.function .functon__headtitle {
+  width: 100%;
+}
+.function .function__list {
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  max-width: 600px;
+}
+.function .function__list .function__step {
+  background-color: #f6f6f6;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 0;
+  margin: 10px 0;
+  border-radius: 20px;
+  position: relative;
+}
+.function .function__list .function__step .function__number {
+  width: 25px;
+  height: 25px;
+  background-color: #9356DC;
+  border-radius: 100%;
+  text-align: center;
+  color: white;
+  position: absolute;
+  left: -12px;
+  padding-top: 3px;
+}
+.function .function__list .function__step .function__logo {
+  width: 20%;
+  margin-left: 40px;
+  padding-top: 3px;
+}
+.function .function__list .function__step .function__title {
+  width: 60%;
+}
+.function .function__list .function__select {
+  background-color: #f5edff;
+}
+.function .function__list .function__select .function__logo__select {
+  color: #9356DC;
+}
+
+main {
+  padding: 15px;
+  background-color: #f6f6f6;
+}
+main .resto__list {
+  padding: 15px;
+}
+main .card__resto {
+  padding-bottom: 20px;
+  position: relative;
+}
+main .card__resto .resto__new {
+  background-color: #99E2D0;
+  padding: 5px;
+  color: #278870;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+}
+main .card__resto .img__resto__pic {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+main .card__resto .resto__section__info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #ffffff;
+  align-items: center;
+  padding: 10px;
+}
+
+footer {
+  background-color: #353535;
+  padding: 20px;
+}
+footer .footer__logo {
+  color: #ffffff;
+  margin-bottom: 20px;
+  font-family: "Shrikhand", cursive;
+}
+footer .footer__element {
+  display: flex;
+  flex-direction: row;
+  padding: 5px 0;
+}
+footer .footer__element__logo {
+  color: #ffffff;
+  width: 20px;
+  margin-right: 6px;
+}
+footer .footer__element__name {
+  color: #ffffff;
+}
+
+/* +++       Version tablette        +++*/
+@media (min-width: 600px) and (max-width: 945px) {
+  nav {
+    justify-content: flex-start;
   }
   nav .nav__img {
-    width: 40%;
+    width: 30%;
   }
 
-  header {
-    flex-direction: column;
-    background-color: #eaeaea;
-    width: 100%;
-    padding: 15px;
-    border-top: solid 3px #d4d4d4;
-  }
-  header .location .location__logo {
-    margin-right: 15px;
-  }
-
-  section .exploration {
-    background-color: #f6f6f6;
-    flex-direction: column;
-    padding: 15px;
-    align-items: center;
-  }
-  section .exploration .exploration__title {
-    width: 50%;
-    text-align: center;
-    margin: 10px 0;
-  }
-  section .exploration .exploration__description {
-    width: 60%;
-    text-align: center;
-    margin: 10px 0;
-  }
-  section .exploration .exploration__btn {
-    margin: 10px 0 20px;
-  }
-
-  .function {
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-    align-items: center;
-  }
-  .function .functon__headtitle {
-    width: 100%;
-  }
-  .function .function__list {
-    flex-direction: column;
-    align-items: center;
-    width: 90%;
-  }
-  .function .function__list .function__step {
-    background-color: #f6f6f6;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 0;
-    margin: 10px 0;
-    border-radius: 20px;
-  }
-  .function .function__list .function__step .function__number {
-    width: 25px;
-    height: 25px;
-    background-color: #9356DC;
-    border-radius: 100%;
-    text-align: center;
-    color: white;
-    position: absolute;
-    left: 25px;
-  }
-  .function .function__list .function__step .function__logo {
-    width: 20%;
-    margin-left: 40px;
-  }
-  .function .function__list .function__step .function__title {
-    width: 70%;
-  }
-  .function .function__list .function__select {
-    background-color: #f5edff;
-  }
-  .function .function__list .function__select .function__logo__select {
-    color: #9356DC;
-  }
-
-  main {
-    padding: 15px;
-    background-color: #f6f6f6;
-  }
   main .resto__list {
-    padding: 15px;
-  }
-  main .card__resto {
-    padding-bottom: 20px;
-    position: relative;
-  }
-  main .card__resto .resto__new {
-    background-color: #99E2D0;
-    padding: 5px;
-    color: #278870;
-    position: absolute;
-    top: 5%;
-    right: 5%;
-  }
-  main .card__resto .resto__section__info {
+    padding: 0px;
+    padding-top: 15px;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
-    background-color: white;
-    align-items: center;
-    padding: 10px;
+  }
+  main .resto__list .card__resto {
+    width: 47%;
   }
 
   footer {
-    background-color: #353535;
-    padding: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
-  footer .footer__logo {
-    color: white;
-    margin-bottom: 20px;
-    font-family: "Shrikhand", cursive;
+}
+/* +++       Version desktop        +++*/
+@media (min-width: 945px) {
+  nav .nav__img {
+    width: 25%;
   }
-  footer .footer__element {
+
+  main {
+    padding: 10px;
+  }
+  main .resto__list {
+    padding: 0px;
+    padding-top: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  main .resto__list .card__resto {
+    width: 24%;
+  }
+
+  footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  footer .footer__list {
     display: flex;
     flex-direction: row;
-    padding: 5px 0;
-  }
-  footer .footer__element__logo {
-    color: white;
-    width: 5%;
-    margin-right: 6px;
-  }
-  footer .footer__element__name {
-    color: white;
+    width: 100%;
+    justify-content: space-around;
   }
 }
 
