--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,27 +14,21 @@ a {
 }
 
 
-
 // +++++++++++++++++++++++++++++++++++++
 /* +++       Version Mobile          +++*/
 // +++++++++++++++++++++++++++++++++++++
 
 
-   
-
-    .btn {
-        @extend %btn ;
-        &:hover {
-        @extend %btnHover;
-    }
-    }
-
     // page de chargement
     .loading {
-        width: 100%;
-        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         background: $pinkPurple;
         @extend %centerElement;
+        z-index: -1;
         
         .loading__case {
             // border: rgb(55, 73, 19) solid 1px;
@@ -53,14 +47,14 @@ a {
             }
 
             .loading__bar {
-                border: white solid 3px;
+                // border: white solid 3px;
                 width: 50%;
                 height: 50px;
                 background-color: $purple;
                 @extend %borderRadius;
 
                 .loading__progress {
-                    background-color: $pink;                    
+                    background-color: $white;                    
                     height: 100%;
                     @extend %borderRadius;
                     animation: loadingAvancement 2s;
@@ -79,11 +73,8 @@ a {
     
     // contenu de la page
     .content {
-        // display: none;
-        position: absolute;
-        top: 0;
-        left: 0;
         background-color: white;
+        z-index: 0;
         animation: loadPage 3s;
     }
     
@@ -246,6 +237,10 @@ a {
                 right: 5%;
             }
 
+            .disable {
+                display: none;
+            }
+
 
             .img__resto__pic {
                 @extend %borderTopRadius;
@@ -264,12 +259,15 @@ a {
                 padding: 10px;
                 @extend %borderBottomRadius;
                 @extend %boxshadow;
+
+                
             }
 
         }
     }
 
         // Bas de page
+        
     footer {
         background-color: $greyDark;
         padding: 20px;
@@ -323,7 +321,7 @@ a {
             justify-content: space-between;
 
             .card__resto {
-                width: 47%;
+                width: 49%;
             }
         }
     }
