--- a/sass/styleMenu.scss
+++ b/sass/styleMenu.scss
@@ -13,12 +13,6 @@ a {
     text-decoration: none;
 }
 
-.btn {
-    @extend %btn ;
-    &:hover {
-    @extend %btnHover;
-}
-}
 
 body {
     max-width: 1440px;
@@ -44,7 +38,7 @@ nav {
 
            .nav__back__arrow {
                width: 100%;
-               font-size: 20px;
+               font-size: 30px;
            }
        } 
 
@@ -98,6 +92,10 @@ main {
                 font-size: 30px;
             }
 
+            .heart__empty {
+                background: $grey;
+            }
+
 
         }
         .menus {
@@ -105,9 +103,34 @@ main {
             @extend %centerElement;
             align-items: center;
             flex-direction: column;
+            overflow: hidden;
             
+            .menu__entrees {
+               animation-timing-function: ease-out;
+            }
+
+            .menu__plats {
+                animation-timing-function: linear;
+            }
+
+            .menu__desserts {
+                animation-timing-function: ease-in;
+            }
+
             article {
                 width: 100%;
+                animation: loadStart 1000ms ease-out;
+
+                @keyframes loadStart {
+                    0% {
+                        opacity: 0;
+                        transform: translate(100%);
+                    }
+                    100% {
+                        opacity: 1;
+                        transform: translate(0);
+                    }
+                }
 
                 .article__title {
                     margin-bottom: 10px;
@@ -128,62 +151,60 @@ main {
                 flex-direction: column;
                 align-items: center;
             }
+            
             .menu__card {
-                width: 100%;
-                height: 50px;
                 display: flex;
-                flex-direction: row;
                 justify-content: space-between;
-                margin: 20px 0;
-                align-items: center;
-                background: $white;
+                width: 100%;
+                background-color: $white;
+                margin: 10px;
+                max-width: 800px;
+                overflow: hidden;
                 @extend %borderRadius;
-                max-width: 600px;
-                    .bloc__infoPrice{
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        align-items: center;
-                        width: 100%;
-                        padding: 0 15px 0 15px;
 
-                        &:not(:hover) {
-                            width: 100%;
-                           justify-content: space-between;
-                        }
+                
 
-                        &:hover + .menu__select {
-                            display:flex;
-                            justify-content: flex-end;
-                            align-items: center;
-                            width: 100px;
-                        }
+                .bloc__infoPrice {
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+                    justify-content: space-between;
+                    padding: 10px;
+
+                    &:hover + .menu__select {
+                    transform: translateX(0);
+                      width: 100px;
+                      .fa-check-circle {
+                        transform: rotate(0deg);
+                      }
                     }
+                }
 
-                    .menu__select {
-                        display: none;
-                        height: 50px;
-
+                .menu__select {
+                    width: 0px;
+                    transform: translate(50px);
+                    background-color: $green;
+                    transition: all 500ms ease-out;
+                    @extend %centerElement;
+                    align-items: center;
                     
-                        &:hover {
-                            display: flex;
+                    &:hover {
+                            transform: translateX(0);
                             width: 100px;
-                            justify-content: flex-end;
-                            align-items: center;
+                            .fa-check-circle {
+                              transform: rotate(0deg);
+                            }
                         }
 
-                        .fa-check-circle {
-                            font-size: 30px;
-                            width: 50px;
-                            height: 100%;
-                            text-align: center;
-                            background: $green;
-                            color: $white;
-                            padding-top: 9px;
-                            @extend %borderRightRadius;
-                        }
+                    .fa-check-circle {
+                        // background-color:violet;
+                        font-size: 30px;
+                        transform: rotate(90deg);
+                        transition: transform 500ms 250ms;
+                        color: $white;
                     }
-            }  
+                }
+            }
             }
         }
         
@@ -239,7 +260,7 @@ footer {
     nav {
         .nav__back {
             .nav__back__arrow {
-                font-size: 50px;
+                font-size: 40px;
             }
         }
 
