--- a/style.css
+++ b/style.css
@@ -73,10 +73,62 @@ main .card__resto .resto__section__info {
   border-radius: 25px;
   border: none;
   max-width: 350px;
+  z-index: 1;
+  position: relative;
+}
+.btn:hover::after {
+  opacity: 1;
+}
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(#ff93e1, #a16be0);
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+  border-radius: 25px;
+  box-shadow: 2px 2px 5px #353535;
 }
 
-.btn:hover {
-  background: linear-gradient(#ff93e1, #a16be0);
+.resto__heart {
+  position: relative;
+  margin-left: 5px;
+  width: 50px;
+  height: 50px;
+}
+.resto__heart .fa-heart {
+  position: absolute;
+  font-size: 30px;
+  top: 10px;
+  left: 10px;
+}
+.resto__heart .heart__empty {
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  overflow: hidden;
+  transition: height 1s;
+  z-index: 1;
+}
+.resto__heart .heart__empty:hover {
+  height: 0px;
+}
+.resto__heart .heart__full {
+  height: 50px;
+  z-index: 0;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.resto__heart .heart__full:hover + .heart__empty {
+  height: 0px;
 }
 
 * {
@@ -92,9 +144,13 @@ a {
 
 /* +++       Version Mobile          +++*/
 .loading {
-  width: 100%;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background: linear-gradient(#FF79DA, #9356DC);
+  z-index: -1;
 }
 .loading .loading__case {
   width: 80%;
@@ -110,13 +166,12 @@ a {
   padding-bottom: 20px;
 }
 .loading .loading__case .loading__bar {
-  border: white solid 3px;
   width: 50%;
   height: 50px;
   background-color: #9356DC;
 }
 .loading .loading__case .loading__bar .loading__progress {
-  background-color: #FF79DA;
+  background-color: #ffffff;
   height: 100%;
   animation: loadingAvancement 2s;
 }
@@ -130,10 +185,8 @@ a {
   }
 }
 .content {
-  position: absolute;
-  top: 0;
-  left: 0;
   background-color: white;
+  z-index: 0;
   animation: loadPage 3s;
 }
 
@@ -264,6 +317,9 @@ main .card__resto .resto__new {
   top: 5%;
   right: 5%;
 }
+main .card__resto .disable {
+  display: none;
+}
 main .card__resto .img__resto__pic {
   width: 100%;
   height: 200px;
@@ -318,7 +374,7 @@ footer .footer__element__name {
     justify-content: space-between;
   }
   main .resto__list .card__resto {
-    width: 47%;
+    width: 49%;
   }
 
   footer {
