--- a/styleMenu.css
+++ b/styleMenu.css
@@ -42,7 +42,7 @@ td, th {
   padding: 0;
 }
 
-main .contentMenu .menus article .menu__list, main .contentMenu .menus, nav {
+main .contentMenu .menus article .menu__card .menu__select, main .contentMenu .menus article .menu__list, main .contentMenu .menus, nav {
   display: flex;
   justify-content: center;
 }
@@ -56,11 +56,6 @@ main .contentMenu {
   border-top-right-radius: 15px;
 }
 
-main .contentMenu .menus article .menu__card .menu__select .fa-check-circle {
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
 .btn {
   width: 45%;
   background: linear-gradient(#FF79DA, #9356DC);
@@ -69,10 +64,62 @@ main .contentMenu .menus article .menu__card .menu__select .fa-check-circle {
   border-radius: 25px;
   border: none;
   max-width: 350px;
+  z-index: 1;
+  position: relative;
+}
+.btn:hover::after {
+  opacity: 1;
+}
+.btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(#ff93e1, #a16be0);
+  opacity: 0;
+  z-index: -1;
+  transition: opacity 250ms;
+  border-radius: 25px;
+  box-shadow: 2px 2px 5px #353535;
 }
 
-.btn:hover {
-  background: linear-gradient(#ff93e1, #a16be0);
+.resto__heart {
+  position: relative;
+  margin-left: 5px;
+  width: 50px;
+  height: 50px;
+}
+.resto__heart .fa-heart {
+  position: absolute;
+  font-size: 30px;
+  top: 10px;
+  left: 10px;
+}
+.resto__heart .heart__empty {
+  width: 50px;
+  height: 50px;
+  background: #ffffff;
+  overflow: hidden;
+  transition: height 1s;
+  z-index: 1;
+}
+.resto__heart .heart__empty:hover {
+  height: 0px;
+}
+.resto__heart .heart__full {
+  height: 50px;
+  z-index: 0;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.resto__heart .heart__full:hover + .heart__empty {
+  height: 0px;
 }
 
 * {
@@ -104,7 +151,7 @@ nav .nav__back {
 }
 nav .nav__back .nav__back__arrow {
   width: 100%;
-  font-size: 20px;
+  font-size: 30px;
 }
 nav .nav__img {
   width: 40%;
@@ -146,13 +193,37 @@ main .contentMenu .resto__title .resto__name {
 main .contentMenu .resto__title .fa-heart {
   font-size: 30px;
 }
+main .contentMenu .resto__title .heart__empty {
+  background: #eaeaea;
+}
 main .contentMenu .menus {
   width: 100%;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
+}
+main .contentMenu .menus .menu__entrees {
+  animation-timing-function: ease-out;
+}
+main .contentMenu .menus .menu__plats {
+  animation-timing-function: linear;
+}
+main .contentMenu .menus .menu__desserts {
+  animation-timing-function: ease-in;
 }
 main .contentMenu .menus article {
   width: 100%;
+  animation: loadStart 1000ms ease-out;
+}
+@keyframes loadStart {
+  0% {
+    opacity: 0;
+    transform: translate(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
 main .contentMenu .menus article .article__title {
   margin-bottom: 10px;
@@ -171,52 +242,47 @@ main .contentMenu .menus article .menu__list {
   align-items: center;
 }
 main .contentMenu .menus article .menu__card {
-  width: 100%;
-  height: 50px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  margin: 20px 0;
-  align-items: center;
-  background: #ffffff;
-  max-width: 600px;
+  width: 100%;
+  background-color: #ffffff;
+  margin: 10px;
+  max-width: 800px;
+  overflow: hidden;
 }
 main .contentMenu .menus article .menu__card .bloc__infoPrice {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 0 15px 0 15px;
-}
-main .contentMenu .menus article .menu__card .bloc__infoPrice:not(:hover) {
   width: 100%;
   justify-content: space-between;
+  padding: 10px;
 }
 main .contentMenu .menus article .menu__card .bloc__infoPrice:hover + .menu__select {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  transform: translateX(0);
   width: 100px;
+}
+main .contentMenu .menus article .menu__card .bloc__infoPrice:hover + .menu__select .fa-check-circle {
+  transform: rotate(0deg);
 }
 main .contentMenu .menus article .menu__card .menu__select {
-  display: none;
-  height: 50px;
+  width: 0px;
+  transform: translate(50px);
+  background-color: #99E2D0;
+  transition: all 500ms ease-out;
+  align-items: center;
 }
 main .contentMenu .menus article .menu__card .menu__select:hover {
-  display: flex;
+  transform: translateX(0);
   width: 100px;
-  justify-content: flex-end;
-  align-items: center;
+}
+main .contentMenu .menus article .menu__card .menu__select:hover .fa-check-circle {
+  transform: rotate(0deg);
 }
 main .contentMenu .menus article .menu__card .menu__select .fa-check-circle {
   font-size: 30px;
-  width: 50px;
-  height: 100%;
-  text-align: center;
-  background: #99E2D0;
+  transform: rotate(90deg);
+  transition: transform 500ms 250ms;
   color: #ffffff;
-  padding-top: 9px;
 }
 main .btn__section {
   padding-top: 50px;
@@ -251,7 +317,7 @@ footer .footer__element__name {
 /* +++       Version tablette        +++*/
 @media (min-width: 600px) and (max-width: 945px) {
   nav .nav__back .nav__back__arrow {
-    font-size: 50px;
+    font-size: 40px;
   }
   nav .nav__img {
     width: 30%;
