--- a/sass/libs/component.scss
+++ b/sass/libs/component.scss
@@ -1,6 +1,11 @@
 @import "properties.scss";
 
-
+a {
+    text-decoration: none;
+    &:visited {
+        color: $grey;
+    }
+}
 // bouton----
 .btn {
     width: 45%;
@@ -41,6 +46,7 @@
     margin-left: 5px;
     width: 50px;
     height: 50px;
+    overflow: hidden;
     
     .fa-heart {
         position: absolute;
