--- a/style.css
+++ b/style.css
@@ -65,6 +65,13 @@ main .card__resto .resto__section__info {
   border-bottom-right-radius: 15px;
 }
 
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: #eaeaea;
+}
+
 .btn {
   width: 45%;
   background: linear-gradient(#FF79DA, #9356DC);
@@ -99,6 +106,7 @@ main .card__resto .resto__section__info {
   margin-left: 5px;
   width: 50px;
   height: 50px;
+  overflow: hidden;
 }
 .resto__heart .fa-heart {
   position: absolute;
