--- a/styleMenu.css
+++ b/styleMenu.css
@@ -56,6 +56,13 @@ main .contentMenu {
   border-top-right-radius: 15px;
 }
 
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: #eaeaea;
+}
+
 .btn {
   width: 45%;
   background: linear-gradient(#FF79DA, #9356DC);
@@ -90,6 +97,7 @@ main .contentMenu {
   margin-left: 5px;
   width: 50px;
   height: 50px;
+  overflow: hidden;
 }
 .resto__heart .fa-heart {
   position: absolute;
@@ -152,6 +160,10 @@ nav .nav__back {
 nav .nav__back .nav__back__arrow {
   width: 100%;
   font-size: 30px;
+  color: #353535;
+}
+nav .nav__back .nav__back__arrow:visited {
+  color: #353535;
 }
 nav .nav__img {
   width: 40%;
@@ -285,7 +297,7 @@ main .contentMenu .menus article .menu__card .menu__select .fa-check-circle {
   color: #ffffff;
 }
 main .btn__section {
-  padding-top: 50px;
+  padding: 40px 0 10px 0;
   width: 100%;
   display: flex;
   justify-content: center;
